# Stake-X

./: .gitignore  Cargo.toml  README.md  deploy-devnet.interaction.json  multicontract.toml  package.json
interactor/: Cargo.toml  state.toml
interactor/src/: interact.rs  interactor_main.rs  proxy.rs
interactor/tests/: interact_cs_tests.rs  interact_tests.rs
meta/: Cargo.toml
meta/src/: main.rs
output/: proxy.rs  staking-contract.abi.json  staking-contract.imports.json  staking-contract.mxsc.json
scenarios/: staking_contract.scen.json
scenarios/output/: staking-contract.wasm
src/: staking_contract.rs
src/wasm/: mod.rs
staking-frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
staking-frontend/src/: App.tsx  index.css  main.tsx  vite.config.ts
staking-frontend/src/pages/: StakingDashboard.tsx
tests/: staking_contract_scenario_go_test.rs  staking_contract_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
