[package]
name = "staking-contract"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/staking_contract.rs"

[dependencies]
multiversx-sc-wasm-adapter = "0.54.6"
multiversx-sc-derive = "0.54.6"

[dependencies.multiversx-sc]
version = "0.54.6"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.6"

[workspace]
members = [
    ".",
    "meta",
    "interactor"
]
